main.styl: fix when icons can sometimes go out of place

--- a/main.styl
+++ b/main.styl
@@ -328,19 +328,33 @@ ul.navigation
 	.actions, .uiHovercardFooter
 		colorize: $page-background
 
-
 // jewel flyouts
 #jewelContainer .fbJewel.openToggler
 	.jewelButton
 		colorize: $dark-background, $light-border
-.slimHeader #fbNotificationsJewel a.jewelButton
-.slimHeader #fbMessagesJewel a.jewelButton
-.slimHeader #fbRequestsJewel a.jewelButton
-	background-image: url('images/jewel-normal.png') !important
-.slimHeader #fbNotificationsJewel.openToggler a.jewelButton
-.slimHeader #fbMessagesJewel.openToggler a.jewelButton
-.slimHeader #fbRequestsJewel.openToggler a.jewelButton
-	background-image: url('images/jewel.png') !important
+.slimHeader
+	#fbNotificationsJewel, #fbMessagesJewel, #fbRequestsJewel
+		a.jewelButton
+			background-image: url('images/jewel-normal.png') !important
+		&.openToggler a.jewelButton
+			background-image: url('images/jewel.png') !important
+	jewel-bg($normal, $active, $new, $open)
+		a.jewelButton
+			background-position: $normal !important
+			&:active, &:focus, &:hover
+				background-position: $active !important
+		&.hasNew a.jewelButton
+			background-position: $new !important
+		&.openToggler a.jewelButton
+			&:link, &:visited
+				background-position: $open !important
+	#fbRequestsJewel
+		jewel-bg: -31px -2px, -56px -37px, -31px -37px, -56px -2px
+	#fbMessagesJewel
+		jewel-bg: 0 -247px, -75px -247px, -50px -247px, -25px -247px
+	#fbNotificationsJewel
+		jewel-bg: -31px -72px, -56px -107px, -31px -107px, -56px -72px
+
 .fbJewelFlyout
 	colorize: $light-background, $light-border
 	.notification[style], .jewelItemNew
